--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <div class="flex items-center justify-between h-24"> <!-- Aumenté ligeramente la altura para el logo -->
                 <!-- Logo -->
                 <div class="flex-shrink-0 cursor-pointer flex items-center gap-3">
-                    <!-- CORRECCIÓN: Nombre exacto solicitado por el usuario -->
-                    <img src="LOGO.PNG" alt="Logo Tu Versión de Excelencia" class="h-16 w-auto rounded-full border border-brand-gold/20 shadow-lg shadow-brand-gold/10">
+                    <!-- CORRECCIÓN: Nombre exacto actualizado -->
+                    <img src="LOGO.png.jpeg" alt="Logo Tu Versión de Excelencia" class="h-16 w-auto rounded-full border border-brand-gold/20 shadow-lg shadow-brand-gold/10">
                     <div class="flex flex-col">
                         <span class="font-serif text-xl font-bold text-white tracking-wide leading-none">
                             Tu Versión<span class="text-brand-gold">.DeExcelencia</span>
@@ -191,8 +191,8 @@
                 <div class="bg-brand-dark rounded-2xl border border-white/5 hover:border-brand-gold/30 transition-all hover:-translate-y-2 reveal overflow-hidden group">
                     <div class="h-64 overflow-hidden relative">
                         <div class="absolute inset-0 bg-brand-dark/20 group-hover:bg-transparent transition-all z-10"></div>
-                        <!-- Imagen 2 -->
-                        <img src="imagen 2.JPG.png" alt="Escalabilidad" class="w-full h-full object-cover object-top transform group-hover:scale-110 transition-transform duration-700">
+                        <!-- Imagen Local (Escalabilidad) -->
+                        <img src="imagen 2.png.jpeg" alt="Escalabilidad" class="w-full h-full object-cover object-top transform group-hover:scale-110 transition-transform duration-700">
                     </div>
                     <div class="p-8 relative z-20 bg-brand-dark">
                         <div class="flex items-center gap-3 mb-4">
@@ -209,7 +209,7 @@
                 <div class="bg-brand-dark rounded-2xl border border-white/5 hover:border-brand-gold/30 transition-all hover:-translate-y-2 reveal delay-100 overflow-hidden group">
                     <div class="h-64 overflow-hidden relative">
                         <div class="absolute inset-0 bg-brand-dark/20 group-hover:bg-transparent transition-all z-10"></div>
-                        <!-- CORRECCIÓN: Nombre exacto de imagen 3 (adjunta) -->
+                        <!-- CORRECCIÓN: Imagen Exacta Solicitada -->
                         <img src="imagen 3.PNG.jpg" alt="Liderazgo" class="w-full h-full object-cover object-top transform group-hover:scale-110 transition-transform duration-700">
                     </div>
                     <div class="p-8 relative z-20 bg-brand-dark">
@@ -227,8 +227,8 @@
                 <div class="bg-brand-dark rounded-2xl border border-white/5 hover:border-brand-gold/30 transition-all hover:-translate-y-2 reveal delay-200 overflow-hidden group">
                     <div class="h-64 overflow-hidden relative">
                         <div class="absolute inset-0 bg-brand-dark/20 group-hover:bg-transparent transition-all z-10"></div>
-                        <!-- Imagen 4 -->
-                        <img src="imagen 4.JPG.png" alt="Mentalidad CEO" class="w-full h-full object-cover object-top transform group-hover:scale-110 transition-transform duration-700">
+                        <!-- CORRECCIÓN: Imagen de Stock Unsplash (Mentalidad CEO) -->
+                        <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Mentalidad CEO" class="w-full h-full object-cover object-top transform group-hover:scale-110 transition-transform duration-700">
                     </div>
                     <div class="p-8 relative z-20 bg-brand-dark">
                         <div class="flex items-center gap-3 mb-4">
@@ -426,8 +426,8 @@
             <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-8 mb-8">
                 <!-- Brand Info -->
                 <div class="text-center md:text-left flex items-center gap-3">
-                    <!-- CORRECCIÓN: Nombre exacto solicitado por el usuario -->
-                    <img src="LOGO.PNG" alt="Logo Footer" class="h-12 w-auto rounded-full border border-white/10">
+                    <!-- CORRECCIÓN: Nombre exacto actualizado -->
+                    <img src="LOGO.png.jpeg" alt="Logo Footer" class="h-12 w-auto rounded-full border border-white/10">
                     <div>
                         <span class="font-serif text-2xl font-bold text-white">
                             Tu Versión<span class="text-brand-gold">.DeExcelencia</span>
