--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
                 <div class="bg-brand-dark rounded-2xl border border-white/5 hover:border-brand-gold/30 transition-all hover:-translate-y-2 reveal delay-100 overflow-hidden group">
                     <div class="h-64 overflow-hidden relative">
                         <div class="absolute inset-0 bg-brand-dark/20 group-hover:bg-transparent transition-all z-10"></div>
-                        <!-- CORRECCIÓN: Imagen Exacta Solicitada -->
-                        <img src="imagen 3.PNG.jpg" alt="Liderazgo" class="w-full h-full object-cover object-top transform group-hover:scale-110 transition-transform duration-700">
+                        <!-- CORRECCIÓN: Imagen Exacta Solicitada con espacio codificado -->
+                        <img src="imagen%203.PNG.png" alt="Liderazgo" class="w-full h-full object-cover object-top transform group-hover:scale-110 transition-transform duration-700">
                     </div>
                     <div class="p-8 relative z-20 bg-brand-dark">
                         <div class="flex items-center gap-3 mb-4">
