--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <!-- Logo -->
                 <div class="flex-shrink-0 cursor-pointer flex items-center gap-3">
                     <!-- CORRECCIÓN: Nombre exacto actualizado -->
-                    <img src="LOGO.png.png" alt="Logo Tu Versión de Excelencia" class="h-16 w-auto rounded-full border border-brand-gold/20 shadow-lg shadow-brand-gold/10">
+                    <img src="LOGO.png.jpeg" alt="Logo Tu Versión de Excelencia" class="h-16 w-auto rounded-full border border-brand-gold/20 shadow-lg shadow-brand-gold/10">
                     <div class="flex flex-col">
                         <span class="font-serif text-xl font-bold text-white tracking-wide leading-none">
                             Tu Versión<span class="text-brand-gold">.DeExcelencia</span>
@@ -192,7 +192,7 @@
                     <div class="h-64 overflow-hidden relative">
                         <div class="absolute inset-0 bg-brand-dark/20 group-hover:bg-transparent transition-all z-10"></div>
                         <!-- Imagen Local (Escalabilidad) -->
-                        <img src="imagen 2.png.png" alt="Escalabilidad" class="w-full h-full object-cover object-top transform group-hover:scale-110 transition-transform duration-700">
+                        <img src="imagen 2.png.jpeg" alt="Escalabilidad" class="w-full h-full object-cover object-top transform group-hover:scale-110 transition-transform duration-700">
                     </div>
                     <div class="p-8 relative z-20 bg-brand-dark">
                         <div class="flex items-center gap-3 mb-4">
@@ -427,7 +427,7 @@
                 <!-- Brand Info -->
                 <div class="text-center md:text-left flex items-center gap-3">
                     <!-- CORRECCIÓN: Nombre exacto actualizado -->
-                    <img src="LOGO.png.png" alt="Logo Footer" class="h-12 w-auto rounded-full border border-white/10">
+                    <img src="LOGO.png.jpeg" alt="Logo Footer" class="h-12 w-auto rounded-full border border-white/10">
                     <div>
                         <span class="font-serif text-2xl font-bold text-white">
                             Tu Versión<span class="text-brand-gold">.DeExcelencia</span>
@@ -517,4 +517,3 @@
     </script>
 </body>
 </html>
-
